Fix spacing between components

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -129,7 +129,7 @@ h1 {
 .navbar {
   display: flex;
   flex-direction: column;
-  width: 14%;
+  width: 100%;
   background: #2f8c4b;
 }
 
